fix header alignment inside annotation

--- a/docs/docco.css
+++ b/docs/docco.css
@@ -76,7 +76,7 @@ h1 {
   margin-top: 40px;
 }
 
-.annotation h1, h2, h3, h4, h5, h6 {
+.annotation h2, h3, h4, h5, h6 {
   margin-top: 20px;
 }
 
@@ -348,7 +348,7 @@ ul.sections > li > div {
     opacity: 1;
   }
 
-  .annotation h1, h2, h3, h4, h5, h6 {
+  .annotation h2, h3, h4, h5, h6 {
     margin-top: 5px;
   }
 
